--- a/index.html
+++ b/index.html
@@ -5,58 +5,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Klimafit Prototype</title>
-    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="dist/styles.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <style>
+        .input-group-number {
+            max-width: 50px;
+            border: none;
+            font-size: 20px;
+            font-weight: bold;
+            text-align: right;
+        }
+    </style>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 </head>
-<body>
+<body class="bg-warning position-relativ">
     <section class="section my-5">
         <div class="wrapper">
             <div class="container">
-                <div class="h1 text-center">Prototyp</div>
-                <form class="py-3 container" action="">
-                    <div class="row">
-                        <h4>1. Ich reduziere meinen Fleischkonsum und möchte an x Tagen die Woche kein Fleisch essen.</h4>
+                <div class="h1 text-center pb-3">Prototyp</div>
+                <div class="card">
+                    <form class="py-3 container" action="">
+                        <div class="row">
+                            <h4>1. Ich reduziere meinen Fleischkonsum und möchte an x Tagen die Woche kein Fleisch essen.</h4>
+                            <hr>
+                        </div>
+                        <div class="row veggie">
+                            <div class="col-12 col-md-7 py-2">
+                                <p>Ich stelle an <input class="input-group-number text-primary" type="number" v-model="value_veggie_day"/> Tagen pro Woche auf eine vegetarische Ernährung um. Daraus errechnet sich eine Einsparung von <span class="text-success"><span v-text="veggie_day"></span> kg CO2e.</span></p>
+                            </div>
+                            <div class="col-12 col-md-5 py-2">
+                                <input class="form-range" type="range" min="0" max="7" step="1" v-model="value_veggie_day">
+                            </div>
+                            <div class="col-12 col-md-7 py-2">
+                                <p>Die Durchführung der Challenge für <input class="input-group-number text-primary" type="number" v-model="value_veggie_week"/> Wochen ergibt eine Einsparung von <span class="text-success"><span v-text="veggie_week"></span> kg CO2e.</span></p>
+                            </div>
+                            <div class="col-12 col-md-5 py-2">
+                                <input class="form-range" type="range" min="0" max="52" step="1" v-model="value_veggie_week">
+                            </div>
+                            <div class="col-12">
+                                Die Durchführung der Challenge für ein Jahr ergibt eine Einsparung von <span class="text-success"><span v-text="veggie_year"></span> kg CO2e.
+                            </div>
+                        </div>
                         <hr>
-                    </div>
-                    <div class="row veggie">
-                        <div class="col-12 col-md-7 py-2">
-                            <p>Ich stelle an <input class="input-group-number text-primary" type="number" v-model="value_veggie_day"/> Tagen pro Woche auf eine vegetarische Ernährung um. Daraus errechnet sich eine Einsparung von <span class="text-success"><span v-text="veggie_day"></span> kg CO2e.</span></p>
+                        <div class="row water">
+                            <div class="col-12 col-md-7 py-2">
+                                <p>Ich kaufe in einer Woche <input class="input-group-number text-primary" type="number" v-model="value_water_day"/> Liter weniger Mineralwasser und trinke dafür Leitungswasser. Daraus errechnet sich eine Einsparung von <span class="text-success"><span v-text="water_day"></span> kg CO2e.</span></p>
+                            </div>
+                            <div class="col-12 col-md-5 py-2">
+                                <input class="form-range" type="range" min="0" max="7" step="1" v-model="value_water_day">
+                            </div>
+                            <div class="col-12 col-md-7 py-2">
+                                <p>Die Durchführung der Challenge für <input class="input-group-number text-primary" type="number" v-model="value_water_week"/> Wochen ergibt eine Einsparung von <span class="text-success"><span v-text="water_week"></span> kg CO2e.</span></p>
+                            </div>
+                            <div class="col-12 col-md-5 py-2">
+                                <input class="form-range" type="range" min="0" max="52" step="1" v-model="value_water_week">
+                            </div>
+                            <div class="col-12">
+                                Die Durchführung der Challenge für ein Jahr ergibt eine Einsparung von <span class="text-success"><span v-text="water_year"></span> kg CO2e.
+                            </div>
                         </div>
-                        <div class="col-12 col-md-5 py-2">
-                            <input class="form-range" type="range" min="0" max="7" step="1" v-model="value_veggie_day">
+                        <div class="row my-5">
+                            <h3 class="py3 text-center">Deine gesamte Einsparung beträgt</h3>
+                            <h2 class="text-center"><span v-text="total"></span> kg CO2e.</h2>
                         </div>
-                        <div class="col-12 col-md-7 py-2">
-                            <p>Die Durchführung der Challenge für <input class="input-group-number text-primary" type="number" v-model="value_veggie_week"/> Wochen ergibt eine Einsparung von <span class="text-success"><span v-text="veggie_week"></span> kg CO2e.</span></p>
-                        </div>
-                        <div class="col-12 col-md-5 py-2">
-                            <input class="form-range" type="range" min="0" max="52" step="1" v-model="value_veggie_week">
-                        </div>
-                        <div class="col-12">
-                            Die Durchführung der Challenge für ein Jahr ergibt eine Einsparung von <span class="text-success"><span v-text="veggie_year"></span> kg CO2e.
-                        </div>
-                    </div>
-                    <div class="row water">
-                        <div class="col-12 col-md-7 py-2">
-                            <p>Ich kaufe in einer Woche <input class="input-group-number text-primary" type="number" v-model="value_water_day"/> Liter weniger Mineralwasser und trinke dafür Leitungswasser. Daraus errechnet sich eine Einsparung von <span class="text-success"><span v-text="water_day"></span> kg CO2e.</span></p>
-                        </div>
-                        <div class="col-12 col-md-5 py-2">
-                            <input class="form-range" type="range" min="0" max="7" step="1" v-model="value_water_day">
-                        </div>
-                        <div class="col-12 col-md-7 py-2">
-                            <p>Die Durchführung der Challenge für <input class="input-group-number text-primary" type="number" v-model="value_water_week"/> Wochen ergibt eine Einsparung von <span class="text-success"><span v-text="water_week"></span> kg CO2e.</span></p>
-                        </div>
-                        <div class="col-12 col-md-5 py-2">
-                            <input class="form-range" type="range" min="0" max="52" step="1" v-model="value_water_week">
-                        </div>
-                        <div class="col-12">
-                            Die Durchführung der Challenge für ein Jahr ergibt eine Einsparung von <span class="text-success"><span v-text="water_year"></span> kg CO2e.
-                        </div>
-                    </div>
-                    <div class="row my-5">
-                        <h3 class="py3 text-center">Deine Gesamteinsparung</h3>
-                        <h2 class="text-center"><span v-text="total"></span> kg CO2e.</h2>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
