--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Klimafit Prototype</title>
     <link rel="stylesheet" href="dist/styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous"> -->
     <style>
         .input-group-number {
             max-width: 50px;
@@ -22,7 +22,7 @@
     <section class="section my-3">
         <div class="wrapper">
             <div class="container">
-                <div class="h1 text-center pb-3">Prototyp</div>
+                <div class="h1 text-center text-primary pb-3">Prototyp Klimafit Challenge</div>
                 <div class="card">
                     <form class="py-3 container" action="">
                         <div class="row">
@@ -33,19 +33,19 @@
                         </div>
                         <div class="row veggie">
                             <div class="col-12 col-md-7 py-2">
-                                <p>Ich stelle an <input class="input-group-number text-primary" type="number" v-model="value_veggie_day"/> Tagen pro Woche auf eine vegetarische Ernährung um. Daraus errechnet sich eine Einsparung von <span class="text-success"><span v-text="veggie_day"></span> kg CO2e.</span></p>
+                                <p>Ich stelle an <input class="input-group-number text-primary" type="number" v-model="value_veggie_day"/> Tagen pro Woche auf eine vegetarische Ernährung um. Daraus errechnet sich eine Einsparung von <span class="text-success"><span v-text="veggie_day"></span> kg CO<sub></sub>2</sub>e.</span></p>
                             </div>
                             <div class="col-12 col-md-5 py-2">
                                 <input class="form-range" type="range" min="0" max="7" step="1" v-model="value_veggie_day">
                             </div>
                             <div class="col-12 col-md-7 py-2">
-                                <p>Die Durchführung der Challenge für <input class="input-group-number text-primary" type="number" v-model="value_veggie_week"/> Wochen ergibt eine Einsparung von <span class="text-success"><span v-text="veggie_week"></span> kg CO2e.</span></p>
+                                <p>Die Durchführung der Challenge für <input class="input-group-number text-primary" type="number" v-model="value_veggie_week"/> Wochen ergibt eine Einsparung von <span class="text-success"><span v-text="veggie_week"></span> kg CO<sub>2</sub>e.</span></p>
                             </div>
                             <div class="col-12 col-md-5 py-2">
                                 <input class="form-range" type="range" min="0" max="52" step="1" v-model="value_veggie_week">
                             </div>
                             <div class="col-12">
-                                Die Durchführung der Challenge für ein Jahr ergibt eine Einsparung von <span class="text-success"><span v-text="veggie_year"></span> kg CO2e.
+                                Die Durchführung der Challenge für ein Jahr ergibt eine Einsparung von <span class="text-success"><span v-text="veggie_year"></span> kg CO<sub>2</sub>e.
                             </div>
                         </div>
                         <div class="row mt-4">
@@ -56,24 +56,24 @@
                         </div>
                         <div class="row water">
                             <div class="col-12 col-md-7 py-2">
-                                <p>Ich kaufe in einer Woche <input class="input-group-number text-primary" type="number" v-model="value_water_day"/> Liter weniger Mineralwasser und trinke dafür Leitungswasser. Daraus errechnet sich eine Einsparung von <span class="text-success"><span v-text="water_day"></span> kg CO2e.</span></p>
+                                <p>Ich kaufe in einer Woche <input class="input-group-number text-primary" type="number" v-model="value_water_day"/> Liter weniger Mineralwasser und trinke dafür Leitungswasser. Daraus errechnet sich eine Einsparung von <span class="text-success"><span v-text="water_day"></span> kg CO<sub>2</sub>e.</span></p>
                             </div>
                             <div class="col-12 col-md-5 py-2">
-                                <input class="form-range" type="range" min="0" max="7" step="1" v-model="value_water_day">
+                                <input class="form-range" type="range" min="0" max="20" step="1" v-model="value_water_day">
                             </div>
                             <div class="col-12 col-md-7 py-2">
-                                <p>Die Durchführung der Challenge für <input class="input-group-number text-primary" type="number" v-model="value_water_week"/> Wochen ergibt eine Einsparung von <span class="text-success"><span v-text="water_week"></span> kg CO2e.</span></p>
+                                <p>Die Durchführung der Challenge für <input class="input-group-number text-primary" type="number" v-model="value_water_week"/> Wochen ergibt eine Einsparung von <span class="text-success"><span v-text="water_week"></span> kg CO<sub>2</sub>e.</span></p>
                             </div>
                             <div class="col-12 col-md-5 py-2">
                                 <input class="form-range" type="range" min="0" max="52" step="1" v-model="value_water_week">
                             </div>
                             <div class="col-12">
-                                Die Durchführung der Challenge für ein Jahr ergibt eine Einsparung von <span class="text-success"><span v-text="water_year"></span> kg CO2e.
+                                Die Durchführung der Challenge für ein Jahr ergibt eine Einsparung von <span class="text-success"><span v-text="water_year"></span> kg CO<sub>2</sub>e.
                             </div>
                         </div>
                         <div class="row mt-5 mb-2">
                             <h3 class="py3 text-center">Deine gesamte Einsparung beträgt</h3>
-                            <h2 class="text-center"><span v-text="total"></span> kg CO2e.</h2>
+                            <h2 class="text-center"><span class="display-2 text-success" v-text="total"></span> kg CO<sub>2</sub>e.</h2>
                         </div>
                     </form>
                 </div>
@@ -94,25 +94,25 @@
             },
             computed: {
                 veggie_day: function () {
-                    return this.value_veggie_day * 3.27
+                    return (this.value_veggie_day * 3.27).toFixed(2)
                 },
                 veggie_week: function () {
-                    return this.value_veggie_day * 3.27 * this.value_veggie_week
+                    return (this.value_veggie_day * 3.27 * this.value_veggie_week).toFixed(2)
                 },
                 veggie_year: function () {
-                    return this.value_veggie_day * 3.27 * 52
+                    return (this.value_veggie_day * 3.27 * 52).toFixed(2)
                 },
                 water_day: function () {
-                    return this.value_water_day * 0.21
+                    return (this.value_water_day * 0.21).toFixed(2)
                 },
                 water_week: function () {
-                    return this.value_water_day * 0.21 * this.value_water_week
+                    return (this.value_water_day * 0.21 * this.value_water_week).toFixed(2)
                 },
                 water_year: function () {
-                    return this.value_water_day * 0.21 * 52
+                    return (this.value_water_day * 0.21 * 52).toFixed(2)
                 },
                 total: function () {
-                    return this.value_veggie_day * 3.27 * this.value_veggie_week + this.value_water_day * 0.21 * this.value_water_week
+                    return Math.round(this.value_veggie_day * 3.27 * this.value_veggie_week + this.value_water_day * 0.21 * this.value_water_week)
                 }
             }
         });
