--- a/index.html
+++ b/index.html
@@ -5,75 +5,83 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Klimafit Prototype</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fontisto@v3.0.4/css/fontisto/fontisto.min.css"></link>
     <link rel="stylesheet" href="dist/styles.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous"> -->
-    <style>
-        .input-group-number {
-            max-width: 50px;
-            border: none;
-            font-size: 20px;
-            font-weight: bold;
-            text-align: right;
-        }
-    </style>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 </head>
 <body class="bg-warning position-relativ">
     <section class="section my-3">
         <div class="wrapper">
             <div class="container">
-                <div class="h1 text-center text-primary pb-3">Prototyp Klimafit Challenge</div>
+                <div class="h4 text-center pb-3">Prototyp Klima.Fit.Challenge</div>
                 <div class="card">
                     <form class="py-3 container" action="">
                         <div class="row">
                             <div class="col-12">
-                                <h4>1. Ich reduziere meinen Fleischkonsum und möchte an x Tagen die Woche kein Fleisch essen.</h4>
+                                <h5>1. Ich reduziere meinen Fleischkonsum und möchte an x Tagen die Woche kein Fleisch essen.</h5>
                                 <hr>
                             </div>
                         </div>
                         <div class="row veggie">
                             <div class="col-12 col-md-7 py-2">
-                                <p>Ich stelle an <input class="input-group-number text-primary" type="number" v-model="value_veggie_day"/> Tagen pro Woche auf eine vegetarische Ernährung um. Daraus errechnet sich eine Einsparung von <span class="text-success"><span v-text="veggie_day"></span> kg CO<sub></sub>2</sub>e.</span></p>
+                                <p>Ich stelle an <input class="input-group-number text-primary" type="number" v-model="value_veggie_day"/> Tagen pro Woche auf eine vegetarische Ernährung um. Daraus errechnet sich eine Einsparung von <span class="text-success"><span class="result" v-text="veggie_day"></span> kg CO<sub></sub>2</sub>e.</span></p>
                             </div>
                             <div class="col-12 col-md-5 py-2">
                                 <input class="form-range" type="range" min="0" max="7" step="1" v-model="value_veggie_day">
                             </div>
                             <div class="col-12 col-md-7 py-2">
-                                <p>Die Durchführung der Challenge für <input class="input-group-number text-primary" type="number" v-model="value_veggie_week"/> Wochen ergibt eine Einsparung von <span class="text-success"><span v-text="veggie_week"></span> kg CO<sub>2</sub>e.</span></p>
+                                <p>Die Durchführung der Challenge für <input class="input-group-number text-primary" type="number" v-model="value_veggie_week"/> Wochen ergibt eine Einsparung von <span class="text-success"><span class="result" v-text="veggie_week"></span> kg CO<sub>2</sub>e.</span></p>
                             </div>
                             <div class="col-12 col-md-5 py-2">
                                 <input class="form-range" type="range" min="0" max="52" step="1" v-model="value_veggie_week">
                             </div>
                             <div class="col-12">
-                                Die Durchführung der Challenge für ein Jahr ergibt eine Einsparung von <span class="text-success"><span v-text="veggie_year"></span> kg CO<sub>2</sub>e.
+                                Die Durchführung der Challenge für ein Jahr ergibt eine Einsparung von <span class="text-success"><span class="result" v-text="veggie_year"></span> kg CO<sub>2</sub>e.
                             </div>
                         </div>
                         <div class="row mt-4">
                             <div class="col-12">
-                                <h4>2. In den nächsten x Wochen kaufe ich y Flaschen weniger Flaschenwasser und trinke dafür Leitungswasser.</h4>
+                                <h5>2. In den nächsten x Wochen kaufe ich y Flaschen weniger Flaschenwasser und trinke dafür Leitungswasser.</h5>
                                 <hr>
                             </div>
                         </div>
                         <div class="row water">
                             <div class="col-12 col-md-7 py-2">
-                                <p>Ich kaufe in einer Woche <input class="input-group-number text-primary" type="number" v-model="value_water_day"/> Liter weniger Mineralwasser und trinke dafür Leitungswasser. Daraus errechnet sich eine Einsparung von <span class="text-success"><span v-text="water_day"></span> kg CO<sub>2</sub>e.</span></p>
+                                <p>Ich kaufe in einer Woche <input class="input-group-number text-primary" type="number" v-model="value_water_day"/> Liter weniger Mineralwasser und trinke dafür Leitungswasser. Daraus errechnet sich eine Einsparung von <span class="text-success"><span class="result" v-text="water_day"></span> kg CO<sub>2</sub>e.</span></p>
                             </div>
                             <div class="col-12 col-md-5 py-2">
                                 <input class="form-range" type="range" min="0" max="20" step="1" v-model="value_water_day">
                             </div>
                             <div class="col-12 col-md-7 py-2">
-                                <p>Die Durchführung der Challenge für <input class="input-group-number text-primary" type="number" v-model="value_water_week"/> Wochen ergibt eine Einsparung von <span class="text-success"><span v-text="water_week"></span> kg CO<sub>2</sub>e.</span></p>
+                                <p>Die Durchführung der Challenge für <input class="input-group-number text-primary" type="number" v-model="value_water_week"/> Wochen ergibt eine Einsparung von <span class="text-success"><span class="result" v-text="water_week"></span> kg CO<sub>2</sub>e.</span></p>
                             </div>
                             <div class="col-12 col-md-5 py-2">
                                 <input class="form-range" type="range" min="0" max="52" step="1" v-model="value_water_week">
                             </div>
                             <div class="col-12">
-                                Die Durchführung der Challenge für ein Jahr ergibt eine Einsparung von <span class="text-success"><span v-text="water_year"></span> kg CO<sub>2</sub>e.
+                                Die Durchführung der Challenge für ein Jahr ergibt eine Einsparung von <span class="text-success"><span class="result" v-text="water_year"></span> kg CO<sub>2</sub>e.
                             </div>
                         </div>
-                        <div class="row mt-5 mb-2">
-                            <h3 class="py3 text-center">Deine gesamte Einsparung beträgt</h3>
-                            <h2 class="text-center"><span class="display-2 text-success" v-text="total"></span> kg CO<sub>2</sub>e.</h2>
+                        <div class="row mt-3 mb-2">
+                            <div class="col-12 col-md-6 offset-md-3">
+                                <h3 class="py3 text-center">Insgesamt würde deine Einsparung</h3>
+                                <h2 class="text-center"><span class="display-3 text-success" v-text="total"></span> kg CO<sub>2</sub>e betragen.</h2>
+                            </div>
+                            <div class="col-12 col-md-3 mt-3 mt-md-0 d-flex justify-content-center align-items-center">
+                                <button type="button" class="btn btn-success text-white" id="liveToastBtn" v-show="total > 0">Starte deine Klima.Fit.Challenge</button>
+                            </div>
+                        </div>
+
+                        <div class="position-fixed top-0 end-0 p-3" style="z-index: 11">
+                            <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                                <div class="toast-header bg-success">
+                                    <strong class="me-auto text-white">Dein Klimaziel</strong>
+                                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                                </div>
+                                <div class="toast-body">
+                                    <span class="result" v-text="total"></span> kg CO<sub>2</sub>e zu deiner Challenge hinzugefügt.
+                                </div>
+                            </div>
                         </div>
                     </form>
                 </div>
@@ -114,8 +122,14 @@
                 total: function () {
                     return Math.round(this.value_veggie_day * 3.27 * this.value_veggie_week + this.value_water_day * 0.21 * this.value_water_week)
                 }
+            },
+            watch: {
+                // total(newValue) {
+                //     alert(`yes, computed property changed: ${newValue}`);
+                // }
             }
         });
     </script>
+    <script src="dist/index.min.js"></script>
 </body>
 </html>
